# signal-storm-eval

./: .gitignore  AGENTS.md  AUTOMATED_CHECKS.md  BEST_PRACTICES.md  CONTRIBUTING.md  EVALUATION_CHECKLIST.md  FIDELITY.md  HANDOVER.md  Makefile  NOTICE  README.md  TASK_VERSIONING.md  TEMPLATE.md  pyproject.toml
.claude/agents/: eval-reviewer.md
agent_artefacts/signal_storm_bench_1A/evalreport/figures/: env_simulated_components.html
docs/: art-of-evals-checklist.md  build-loop.md  build-status.md  iteration-log.md  product-based-signal-storm-cleanup.md  product-cleanup-acceptance-audit.md  product-score-calibration.md  saved-log-product-calibration.md  topology-notes.md
docs/grounding/: normative-sources.md
docs/superpowers/plans/: 2026-06-19-product-based-signal-storm-cleanup.md
docs/superpowers/specs/: 2026-06-18-task-suite-design.md  2026-06-19-product-based-eval-cleanup-design.md
logs/product-p1-40-serial/: 2026-06-19T15-58-43-00-00_signal-storm_EoetQC6UfWnJiX2dbk6GMa.eval
logs/product-slice-40/: 2026-06-19T16-28-59-00-00_signal-storm_daGkMvq7uwekofouYR7RhN.eval  2026-06-19T16-42-34-00-00_signal-storm_gm69WKhQmdpMkCWut55YQQ.eval  2026-06-19T16-52-55-00-00_signal-storm_97Yfi3R7WjBr9VSbnLWryk.eval  2026-06-19T16-59-15-00-00_signal-storm_NKjoTwxmzmw77ePRgJMJTt.eval  2026-06-19T17-01-04-00-00_signal-storm_X9Egr74exVRFRF3eJGfY5w.eval
logs/product-smoke/: 2026-06-19T14-19-56-00-00_signal-storm_ThYEf6soZPjJKu8BuRdicJ.eval  2026-06-19T15-19-38-00-00_signal-storm_3hsWR5QsWi6CpWhcHyhhSb.eval
scripts/: check_differentiation.py  check_kind_differentiation.py  export_gate_artifacts.py  generate_product_calibration_report.py  generate_saved_log_calibration_report.py  pass_hat_k.py  run_iteration.sh  run_product_smoke.sh  stop_signal_storm_sandboxes.sh
src/examples/agentic/: Dockerfile  __init__.py  agentic.py  compose.yaml  eval.yaml
src/examples/gpqa/: README.md  __init__.py  eval.yaml  gpqa.py
src/examples/llm_judge/: __init__.py  eval.yaml  llm_judge.py
src/examples/simple_qa/: __init__.py  eval.yaml  simple_qa.py
src/signal_storm_bench/: README.md  __init__.py  config.py  dataset.py  eval.yaml  logic.py  sandbox_ops.py  scorers.py  solvers.py  task.py  tools.py
src/signal_storm_bench/topology/: compose.yaml  packetrusher.Dockerfile
src/signal_storm_bench/topology/config/: amf.yaml  config.yml.tmpl  init.sh  prometheus.yml  seed.py  storm.sh
src/utils/: __init__.py  huggingface.py  metadata.py  sample_ids.py
tests/: conftest.py  test_add_readme_section.py  test_config_answer_key.py  test_dataset.py  test_differentiation.py  test_export_gate_artifacts.py  test_generate_readmes.py  test_kind_differentiation.py  test_logic.py  test_pass_hat_k.py  test_product_calibration_report.py  test_saved_log_calibration_report.py  test_scorer_logic.py  test_solvers.py  test_task_wiring.py
tests/examples/: test_agentic.py  test_gpqa.py  test_llm_judge.py  test_simple_qa.py
tools/: add_readme_section.py  check_posix_code.py  check_unlisted_evals.py  enforcement.config  generate_asset_manifest.py  generate_readmes.py  run_checks.sh  run_evals.py
tools/run_autolint/: __init__.py  output.py
tools/run_autolint/checks/: best_practices.py  dependencies.py  file_structure.py
